--- a/index.html
+++ b/index.html
@@ -4,12 +4,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/styles.css">
     <title>Danielle's Weather Dashboard</title>
 </head>
 <body>
     <header>
         <h1>Danielle's Weather Dashboard</h1>
     </header>
+    <main class="container-fluid">
+        <div class="row align-items-center">
+            <div class="col-lg-3" id="search">
+                <div class="search-form">
+                    <h3>Search for a city:</h3>
+                    <form id="user-form" class="c">
+                        <label class="form-label" for="city"></label>
+                        <input name="city" id="city" type="text" autofocus="true" class="form-input"/>
+                        <button type="submit" class="btn">Search</button>
+                    </form>
+                </div>
+                <div class="search-history"></div>
+                
+            </div>
+            <div class="col-lg-9">
+                <div class="row" id="current-weather">
+                </div>
+                <div class="row" id="five-day">
+                    <div class="col-2">
+                        Day 1
+                    </div>
+                    <div class="col-2">
+                        Day 2
+                    </div>
+                    <div class="col-2">
+                        Day 3
+                    </div>
+                    <div class="col-2">
+                        Day 4
+                    </div>
+                    <div class="col-2">
+                        Day 5
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
     
+    <script src="assets/script.js"></script>
 </body>
 </html>
