--- a/index.html
+++ b/index.html
@@ -13,36 +13,36 @@
         <h1>Danielle's Weather Dashboard</h1>
     </header>
     <main class="container-fluid">
-        <div class="row align-items-center">
+        <div class="row">
             <div class="col-lg-3" id="search">
                 <div class="search-form">
                     <h3>Search for a city:</h3>
-                    <form id="user-form" class="c">
+                    <form id="user-form" class="">
                         <label class="form-label" for="city"></label>
                         <input name="city" id="city" type="text" autofocus="true" class="form-input"/>
-                        <button type="submit" class="btn">Search</button>
+                        <button type="submit" class="btn bg-info">Search</button>
                     </form>
                 </div>
                 <div class="search-history"></div>
                 
             </div>
             <div class="col-lg-9">
-                <div class="row" id="current-weather">
+                <div class="row hide" id="current-weather">
                 </div>
-                <div class="row" id="five-day">
-                    <div class="col-2">
+                <div class="row justify-content-between hide" id="five-day">
+                    <div class="col-2 forecast bg-info text-white">
                         Day 1
                     </div>
-                    <div class="col-2">
+                    <div class="col-2 forecast bg-info text-white">
                         Day 2
                     </div>
-                    <div class="col-2">
+                    <div class="col-2 forecast bg-info text-white">
                         Day 3
                     </div>
-                    <div class="col-2">
+                    <div class="col-2 forecast bg-info text-white">
                         Day 4
                     </div>
-                    <div class="col-2">
+                    <div class="col-2 forecast bg-info text-white">
                         Day 5
                     </div>
                 </div>
@@ -50,6 +50,8 @@
         </div>
     </main>
     
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="assets/script.js"></script>
+
 </body>
 </html>
