--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </main>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="assets/script.js"></script>
+    <script src="./assets/script.js"></script>
 
 </body>
 </html>
